Blackpurl/src/objects/GL_Account__c.object
<CustomObject>
    <fields>
        <fullName>MYOB_Account_Name__c</fullName>
        <label>MYOB Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MYOB_Account_Number__c</fullName>
        <label>MYOB Account Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit Account</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Deposit Allocation Account</fullName>
                </value>
                <value>
                    <fullName>Sales Invoice Account</fullName>
                </value>
                <value>
                    <fullName>Received Inventory Accrual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GL Account</label>
    <nameField>
        <displayFormat>GLA-{00000}</displayFormat>
        <label>GL Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>